--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,6 @@
 ---
-import CtaLink from './CtaLink.astro'; 
+//src/components/Hero.astro
+
 import Button from './Button.astro';
 
 const heroVariants = [
