--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,5 @@
 ---
-
-/* src/components/Header.astro */
+// src/components/Header.astro
 
 import "../styles/global.css";
 import CtaLink from './CtaLink.astro'; 
